--- a/SupportManagementSystem/SMS.Web/SMS.Web.csproj
+++ b/SupportManagementSystem/SMS.Web/SMS.Web.csproj
@@ -190,6 +190,7 @@
     <Compile Include="Areas\Administrator\Controllers\AdminController.cs" />
     <Compile Include="Areas\Administrator\Models\RegisterViewModel.cs" />
     <Compile Include="Areas\Administrator\Models\UserViewModel.cs" />
+    <Compile Include="Areas\Administrator\RootRouteConstraint.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\BaseController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
@@ -212,7 +213,7 @@
     <Content Include="Areas\Administrator\Views\web.config" />
     <Content Include="Areas\Administrator\Views\_ViewStart.cshtml" />
     <Content Include="Areas\Administrator\Views\Shared\_Layout.cshtml" />
-    <Content Include="Areas\Administrator\Views\Admin\Panel.cshtml" />
+    <Content Include="Areas\Administrator\Views\Admin\Users.cshtml" />
     <Content Include="Areas\Administrator\Views\Account\Register.cshtml" />
     <Content Include="Areas\Administrator\Views\Account\ShowUser.cshtml" />
     <Content Include="fonts\glyphicons-halflings-regular.eot" />
