--- a/SupportManagementSystem/SMS.Web/SMS.Web.csproj
+++ b/SupportManagementSystem/SMS.Web/SMS.Web.csproj
@@ -215,13 +215,14 @@
     <Content Include="Areas\Administrator\Views\Shared\_Layout.cshtml" />
     <Content Include="Areas\Administrator\Views\Admin\Users.cshtml" />
     <Content Include="Areas\Administrator\Views\Account\Register.cshtml" />
-    <Content Include="Areas\Administrator\Views\Account\ShowUser.cshtml" />
     <Content Include="fonts\glyphicons-halflings-regular.eot" />
     <Content Include="fonts\glyphicons-halflings-regular.ttf" />
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="Areas\Administrator\Views\Admin\EditPhone.cshtml" />
+    <Content Include="Areas\Administrator\Views\Admin\EditEmail.cshtml" />
+    <Content Include="Areas\Administrator\Views\Admin\UserProfile.cshtml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
